Don't reset margins on everything--screws up lists. Also fix paragraph spacing.

--- a/css/screen.css
+++ b/css/screen.css
@@ -1,5 +1,5 @@
 
-* {
+body {
   margin: 0;
   padding: 0;
 }
@@ -16,7 +16,7 @@
 
 h1#blog-title {
     letter-spacing: 0.05em;
-    margin-bottom: 0.1em;
+    margin: 0.1em;
 }
 
 h1#blog-title a {
@@ -35,10 +35,6 @@ h1#blog-title a {
     text-align: justify;
 }
 
-#site-inner p {
-    margin-bottom: 1em;
-}
-
 #footer-inner {
     width: 40em;
     margin: 2em auto 2em auto;
@@ -55,8 +51,9 @@ h1, h2, h3 {
     margin-bottom: 0.5em;
 }
 
-p {
-    line-height: 1.5em;
+#site-inner p, ul, ol {
+    line-height: 1.25em;
+    margin-bottom: 1.45em;
 }
 
 code  {
